--- a/main.html
+++ b/main.html
@@ -1,18 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Bluetooth LE Batter Service Demo</title>
+  <title>Bluetooth LE Battery Service Demo</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
   <script src="script.js"></script>
 </head>
 <body>
-  <h1>Bluetooth LE Battery Service Demo</h1>
-  <div id="device-selection-div">
-    Select device with Battery Service: 
-    <select id="device-selector">
-      <option id="placeholder" value="" disabled selected>
-        No connected devices
-      </option>
-    </select>
+  <div id="header">
+    <img src="bluetooth.png" alt="bluetooth icon">
+    <h1>Bluetooth LE Battery Service</h1>
+    <div id="adapter-status">
+      <ul>
+        <li><span id="adapter-name"></span></li>
+        <li><span id="adapter-address"></span></li>
+      </ul>
+    </div>
+    <hr>
+    <div id="device-selection-div">
+      Select device with Battery Service: 
+      <select id="device-selector">
+        <option id="placeholder" value="" disabled selected>
+          No connected devices
+        </option>
+      </select>
+    </div>
   </div>
   <div id="no-devices-error">
     No device with "Battery Service" selected.
