Added battery level style

--- a/main.html
+++ b/main.html
@@ -29,9 +29,11 @@
     No device with "Battery Service" selected.
   </div>
   <div id="device-info-fields">
-    <div class="device-info-field">
-      Battery Level: <span id="battery-level">-</span>
+    <div class="battery">
+      <div id="battery-level-box" class="level"></div>
+      <div id="battery-level">-</div>
     </div>
+    <div class="battery-tip"></div>
   </div>
 </body>
 </html>
